updated the instructions